# RMF_Compliant_Lift

./: README.md
lift_adapter_template/: config.yaml  package.xml  setup.py
lift_adapter_template/lift_adapter_template/: LiftAPI.py  lift_adapter_template.py  qr_decoder.py
rmf_lift_msgs/: CMakeLists.txt
rmf_lift_msgs/msg/: LiftFloor.msg
