<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lift_adapter_template</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="TODO@TODO.TODO">TODO</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <exec_depend>rmf_lift_msgs</exec_depend>

  <build_depend>sensor_msgs</build_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <build_depend>cv_brigde</build_depend>
  <exec_depend>cv_brigde</exec_depend>
  <build_depend>opencv-python</build_depend>
  <exec_depend>opencv-python</exec_depend>
  <build_depend>pyzbar</build_depend>
  <exec_depend>pyzbar</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
